# -OMClient

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
examples/: Allcodes.cpp  CMakeLists.txt  OMClientApp.cpp
examples/qml/: Allcodes.qml  OMClientApp.qml
frag/: code45Am0.frag  code45Am1.frag  code51Am0.frag  code51Am1.frag  code53Am0.frag  code53Am1.frag  code55Am0.frag  code55Am1.frag  code56Am0.frag  code56Am1.frag  code57Am0.frag  code57Am1.frag  code61Am0.frag  code61Am1.frag  code63Am0.frag  code63Am1.frag  code65Am0.frag  code65Am1.frag  code66Am0.frag  code66Am1.frag  code67Am0.frag  code67Am1.frag
include/esterv/utils/: o_m_client.hpp
qml/: CurrentWeather.qml
src/: o_m_client.cpp
